--- a/openvpn_icon.desktop
+++ b/openvpn_icon.desktop
@@ -2,5 +2,5 @@
 Type=Application
 Name=Openvpn Icon
 Comment=Simple tray icon to start/stop openvpn
-Exec=/home/ysance.local/r.carmona-hagelsteen/projects/vpn_icon/openvpn_icon.py
+Exec=openvpn_icon
 X-GNOME-Autostart-enabled=true
