--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,9 @@ source: openvpn-switch
 Section: utils
 Priority: optional
 Maintainer: Raphael Carmona Hagelsteen <uncorporation@gmail.com>
-Build-Depends: debhelper (>=7), python-support (>=0.8.7) | dh-python, python3-all,
+Build-Depends: debhelper (>=7), dh-python, python3,
  libglib2.0-bin
-X-Python3-Version: >=3.0
+X-Python3-Version: >=3.5
 Standards-Version: 3.8.0
 
 Package: openvpn-switch
