--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,12 @@ source: openvpn-icon
 Section: utils
 Priority: optional
 Maintainer: Raphael Carmona Hagelsteen <uncorporation@gmail.com>
-Build-Depends: debhelper (>=7), dh-python, python3,
- libglib2.0-bin
+Build-Depends: debhelper (>=7), dh-python, python3, libglib2.0-bin
 X-Python3-Version: >=3.5
 Standards-Version: 3.8.0
 
 Package: openvpn-icon
 Architecture: all
 Multi-Arch: foreign
-Depends: ${python3:Depends}, python3-gi, python3-gi-cairo, gir1.2-gtk-3.0, policykit-1, gir1.2-appindicator3-0.1
+Depends: ${python3:Depends}, python3-gi, python3-gi-cairo, gir1.2-gtk-3.0, policykit-1, gir1.2-appindicator3-0.1, openvpn
 Description: Simple tray icon for controlling openvpn CLI based on .ovpn conf file.
